syntax = "proto3";

package thourus.cryptocore;

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

option go_package = "grpc/proto";


service CryptoCore {
  rpc Mine (MineRequest) returns (MineResponse) {}
  rpc Validate (ValidateRequest) returns (ValidateResponse) {}
}

message MineRequest {
  bytes bytes = 1;
  int64 rule = 2;
}

message MineResponse {
  int64 pow = 1;
}

message ValidateRequest {
  bytes bytes = 1;
  string hash = 2;
  int64 pow = 3;
}

message ValidateResponse {
  bool valid = 1;
}